--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
 
       <footer>
         
-        <button id="logoutBtn" class="route"><span class="material-symbols-outlined">logout</span>Sair</button>
+        <a id="logoutBtn" class="route" href="/logout"><span class="material-symbols-outlined">logout</span>Sair</a>
       </footer>
     </aside>
 
