--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,7 @@
   <header class="topbar">
     <div class="container">
       <div class="left">
-        <img src="/static/img/logo.png" alt="Logo" height="28" />
-        <span style="font-weight:700;color:#0f172a;">INPROLIB</span>
+        <img src="/img/logo.png?v=1" alt="INPROLIB" height="36" />
       </div>
       <button class="notif-btn" aria-label="Notificações">
         <span class="material-symbols-outlined">notifications</span>
