--- a/templates/configuracao.html
+++ b/templates/configuracao.html
@@ -71,7 +71,7 @@
         <!-- rotas inseridas por JS -->
       </nav>
       <footer>
-        <button id="logoutBtn" class="route">Sair</button>
+        <a id="logoutBtn" class="route" href="/logout"><span class="material-symbols-outlined">logout</span>Sair</a>
       </footer>
     </aside>
 
