--- a/templates/configuracao.html
+++ b/templates/configuracao.html
@@ -18,7 +18,7 @@
       </button>
             <div class="profile-wrap" style="position:relative">
         <button id="btnProfile" class="profile-btn" aria-haspopup="true" aria-expanded="false" aria-label="Abrir menu do usuário">
-          <img id="profileAvatar" class="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqf7MJNlh6GfxfrjCep_dnXOBm0EwGc0X12A&s" alt="Avatar usuário">
+          <img id="profileAvatar" class="avatar" src="{{ url_for('static', filename=session.get('user_photo')) if session.get('user_photo') else 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqf7MJNlh6GfxfrjCep_dnXOBm0EwGc0X12A&s' }}" alt="Avatar usuário">
         </button>
         <div id="profileDropdown" class="dropdown-menu" role="menu" aria-hidden="true">
           <button id="viewPhoto" class="dropdown-action" role="menuitem">Ver foto</button>
@@ -110,6 +110,10 @@
     </main>
   </div>
 
-  <script src="home.js"></script>
+  <script>
+    window.USER_ROLE = "{{ (session.get('role') or session.get('user_tipo') or '') }}";
+    window.USER_PHOTO = "{{ url_for('static', filename=session.get('user_photo')) if session.get('user_photo') else '' }}";
+  </script>
+  <script src="home.js?v=aval-fix-1"></script>
 </body>
 </html>
